--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.13.5"
+    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
+    "astro": "^5.13.5",
+    "tailwindcss": "^3.4.17"
   }
 }
