--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@astrojs/tailwind": "^6.0.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "aos": "^2.3.4",
     "astro": "^5.13.5",
     "gsap": "^3.13.0",
     "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.7"
   }
 }
