--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aos": "^2.3.4",
     "astro": "^5.13.5",
     "gsap": "^3.13.0",
+    "swiper": "^11.2.10",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
